# halstead_analyzer

./: .gitmodules  CMakeLists.txt  command_for_cpp_17_compiler.txt  main.c  main.cc  temp
include/halstead/: ast_parser.h  halstead.h  metrics.h  test.h
src/: ast_parser.c  ast_parser.cc  metrics.cc  test.cc
